--- a/app/src/main/res/layout-large/activity_health_profile_page.xml
+++ b/app/src/main/res/layout-large/activity_health_profile_page.xml
@@ -32,7 +32,7 @@
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Health detail"
+                android:text="@string/health_details"
                 android:textColor="@color/FontColor"
                 android:textSize="@dimen/fontSizeLarge"
                 android:textStyle="bold"
