--- a/app/src/main/res/layout-normal/activity_sign_up_page.xml
+++ b/app/src/main/res/layout-normal/activity_sign_up_page.xml
@@ -236,7 +236,7 @@
                             android:layout_height="wrap_content"
                             android:layout_column="0"
                             android:background="@color/SubBackground"
-                            android:digits="0123456789"
+                            android:digits="0123456789."
                             android:inputType="phone"
                             android:maxLength="3"
                             android:paddingBottom="8dp"
