--- a/app/src/main/res/layout-small/activity_health_profile_page.xml
+++ b/app/src/main/res/layout-small/activity_health_profile_page.xml
@@ -168,7 +168,7 @@
                     android:textSize="@dimen/fontSizeSmall"
                     android:layout_column="3"
                     android:textColor="@color/FontColor"
-                    android:text="mbp"/>
+                    android:text="bpm"/>
             </TableRow>
         </TableLayout>
 
