--- a/app/src/main/res/layout-xlarge/activity_health_profile_page.xml
+++ b/app/src/main/res/layout-xlarge/activity_health_profile_page.xml
@@ -173,7 +173,7 @@
                     android:textSize="@dimen/fontSizeXLarge"
                     android:layout_column="3"
                     android:textColor="@color/FontColor"
-                    android:text="mbp"/>
+                    android:text="bpm"/>
             </TableRow>
         </TableLayout>
 
