--- a/app/src/main/res/layout/activity_health_profile_page.xml
+++ b/app/src/main/res/layout/activity_health_profile_page.xml
@@ -179,7 +179,7 @@
                     android:textSize="@dimen/fontSize"
                     android:layout_column="3"
                     android:textColor="@color/FontColor"
-                    android:text="mbp"/>
+                    android:text="bpm"/>
             </TableRow>
         </TableLayout>
 
