--- a/app/src/main/res/layout-large/activity_health_profile_page.xml
+++ b/app/src/main/res/layout-large/activity_health_profile_page.xml
@@ -172,7 +172,7 @@
                     android:textSize="@dimen/fontSizeLarge"
                     android:layout_column="3"
                     android:textColor="@color/FontColor"
-                    android:text="mbp"/>
+                    android:text="bpm"/>
             </TableRow>
         </TableLayout>
 
