--- a/app/src/main/res/layout-normal/activity_ichoice.xml
+++ b/app/src/main/res/layout-normal/activity_ichoice.xml
@@ -35,18 +35,24 @@
 
         <Button
             android:id="@+id/btn_find"
+            android:background="@color/ButtonColor"
+            android:textColor="@color/ButtonFont"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/btn_lbl_find" />
 
         <Button
             android:id="@+id/btn_link"
+            android:background="@color/ButtonColor"
+            android:textColor="@color/ButtonFont"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/btn_lbl_link" />
 
         <Button
             android:id="@+id/btn_unlink"
+            android:background="@color/ButtonColor"
+            android:textColor="@color/ButtonFont"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/btn_lbl_unlink" />
