--- a/app/src/main/res/layout-xlarge/activity_health_profile_page.xml
+++ b/app/src/main/res/layout-xlarge/activity_health_profile_page.xml
@@ -97,7 +97,7 @@
                     android:textSize="@dimen/fontSizeXLarge"
                     android:layout_column="3"
                     android:textColor="@color/FontColor"
-                    android:text="KG"/>
+                    android:text="@string/weightUnit"/>
             </TableRow>
             <TableRow>
                 <TextView
@@ -135,7 +135,7 @@
                     android:textSize="@dimen/fontSizeXLarge"
                     android:layout_column="3"
                     android:textColor="@color/FontColor"
-                    android:text="mmHg"/>
+                    android:text="@string/bloodPressureUnit"/>
             </TableRow>
             <TableRow>
                 <TextView
@@ -173,7 +173,7 @@
                     android:textSize="@dimen/fontSizeXLarge"
                     android:layout_column="3"
                     android:textColor="@color/FontColor"
-                    android:text="bpm"/>
+                    android:text="@string/heartRateUnit"/>
             </TableRow>
         </TableLayout>
 
@@ -259,7 +259,7 @@
                     android:textSize="@dimen/fontSizeXLarge"
                     android:textColor="@color/FontColor"
                     android:layout_column="3"
-                    android:text="cm"/>
+                    android:text="@string/lengthUnit"/>
             </TableRow>
             <TableRow>
                 <TextView
@@ -298,7 +298,7 @@
                     android:textSize="@dimen/fontSizeXLarge"
                     android:textColor="@color/FontColor"
                     android:layout_column="3"
-                    android:text="cm"/>
+                    android:text="@string/lengthUnit"/>
             </TableRow>
             <TableRow>
                 <TextView
@@ -337,7 +337,7 @@
                     android:textSize="@dimen/fontSizeXLarge"
                     android:textColor="@color/FontColor"
                     android:layout_column="3"
-                    android:text="cm"/>
+                    android:text="@string/lengthUnit"/>
             </TableRow>
             <TableRow>
                 <TextView
@@ -376,7 +376,7 @@
                     android:textSize="@dimen/fontSizeXLarge"
                     android:textColor="@color/FontColor"
                     android:layout_column="3"
-                    android:text="cm"/>
+                    android:text="@string/lengthUnit"/>
             </TableRow>
             <TableRow>
                 <TextView
@@ -415,7 +415,7 @@
                     android:textSize="@dimen/fontSizeXLarge"
                     android:textColor="@color/FontColor"
                     android:layout_column="3"
-                    android:text="cm"/>
+                    android:text="@string/lengthUnit"/>
             </TableRow>
             <TableRow>
                 <TextView
@@ -453,7 +453,7 @@
                     android:textSize="@dimen/fontSizeXLarge"
                     android:textColor="@color/FontColor"
                     android:layout_column="3"
-                    android:text="cm"/>
+                    android:text="@string/lengthUnit"/>
             </TableRow>
         </TableLayout>
 
