--- a/app/src/main/res/layout/activity_health_profile_page.xml
+++ b/app/src/main/res/layout/activity_health_profile_page.xml
@@ -97,7 +97,7 @@
                     android:textSize="@dimen/fontSize"
                     android:layout_column="3"
                     android:textColor="@color/FontColor"
-                    android:text="KG"/>
+                    android:text="@string/weightUnit"/>
             </TableRow>
             <TableRow>
                 <TextView
@@ -138,7 +138,7 @@
                     android:textSize="@dimen/fontSize"
                     android:layout_column="3"
                     android:textColor="@color/FontColor"
-                    android:text="mmHg"/>
+                    android:text="@string/bloodPressureUnit"/>
             </TableRow>
             <TableRow>
                 <TextView
@@ -179,7 +179,7 @@
                     android:textSize="@dimen/fontSize"
                     android:layout_column="3"
                     android:textColor="@color/FontColor"
-                    android:text="bpm"/>
+                    android:text="@string/heartRateUnit"/>
             </TableRow>
         </TableLayout>
 
@@ -266,7 +266,7 @@
                     android:textSize="@dimen/fontSize"
                     android:textColor="@color/FontColor"
                     android:layout_column="3"
-                    android:text="cm"/>
+                    android:text="@string/lengthUnit"/>
             </TableRow>
             <TableRow>
                 <TextView
@@ -305,7 +305,7 @@
                     android:textSize="@dimen/fontSize"
                     android:textColor="@color/FontColor"
                     android:layout_column="3"
-                    android:text="cm"/>
+                    android:text="@string/lengthUnit"/>
             </TableRow>
             <TableRow>
                 <TextView
@@ -344,7 +344,7 @@
                     android:textSize="@dimen/fontSize"
                     android:textColor="@color/FontColor"
                     android:layout_column="3"
-                    android:text="cm"/>
+                    android:text="@string/lengthUnit"/>
             </TableRow>
             <TableRow>
                 <TextView
@@ -383,7 +383,7 @@
                     android:textSize="@dimen/fontSize"
                     android:textColor="@color/FontColor"
                     android:layout_column="3"
-                    android:text="cm"/>
+                    android:text="@string/lengthUnit"/>
             </TableRow>
             <TableRow>
                 <TextView
@@ -422,7 +422,7 @@
                     android:textSize="@dimen/fontSize"
                     android:textColor="@color/FontColor"
                     android:layout_column="3"
-                    android:text="cm"/>
+                    android:text="@string/lengthUnit"/>
             </TableRow>
             <TableRow>
                 <TextView
@@ -461,7 +461,7 @@
                     android:textSize="@dimen/fontSize"
                     android:textColor="@color/FontColor"
                     android:layout_column="3"
-                    android:text="cm"/>
+                    android:text="@string/lengthUnit"/>
             </TableRow>
         </TableLayout>
 
