--- a/app/src/main/res/layout-normal/activity_ichoice.xml
+++ b/app/src/main/res/layout-normal/activity_ichoice.xml
@@ -39,7 +39,10 @@
             android:textColor="@color/ButtonFont"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/btn_lbl_find" />
+            android:text="@string/btn_lbl_find"
+            android:layout_margin="10dp"
+            android:paddingLeft="3dp"
+            android:paddingRight="3dp" />
 
         <Button
             android:id="@+id/btn_link"
@@ -47,7 +50,10 @@
             android:textColor="@color/ButtonFont"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/btn_lbl_link" />
+            android:text="@string/btn_lbl_link"
+            android:layout_margin="10dp"
+            android:paddingLeft="3dp"
+            android:paddingRight="3dp" />
 
         <Button
             android:id="@+id/btn_unlink"
@@ -55,7 +61,10 @@
             android:textColor="@color/ButtonFont"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/btn_lbl_unlink" />
+            android:text="@string/btn_lbl_unlink"
+            android:layout_margin="10dp"
+            android:paddingLeft="3dp"
+            android:paddingRight="3dp" />
 
     </LinearLayout>
 
